--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"gismasw":"dsaw","privacy":"https://gipstock.com","sndiwnr":"swewew"}
+{"gismasw":"dsaw","privacy":"https://gipstock.net","sndiwnr":"swewew"}
