--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"gismasw":"dsaw","privacy":"https://gipstocks.com","sndiwnr":"swewew"}
+{"gismasw":"dsaw","privacy":"https://applingagip.cc","sndiwnr":"swewew"}
