--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"gismasw":"dsaw","privacy":"https://giproject.com","sndiwnr":"swewew"}
+{"gismasw":"dsaw","privacy":"https://qoangasgip.cc","sndiwnr":"swewew"}
